# Preprocessor

./: .dockerignore  Dockerfile  README.org
.github/workflows/: build-publish-docker-image.yml
preprocessor/: Cargo.toml
preprocessor-service/: Cargo.toml
preprocessor-service/src/: main.rs
preprocessor/src/: api.rs  lib.rs  normalisation.rs  preprocess.rs  tokenise.rs
