[package]
name = "preprocessor-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-rs = { git = "https://github.com/OnlyGraphs/api" }
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tonic = "0.6.2"
log = "0.4"
pretty_env_logger = "0.4"
preprocessor = { path = "./../preprocessor" }