[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
api-rs = { git = "https://github.com/OnlyGraphs/api" }
regex = "1.5.4"
rust-stemmers = "1.2.0"
stop-words = "0.6.2"
